<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_CircleEllipseWriteStep" Id="{3606e005-34c4-4043-a04d-866e9517e1a7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CircleEllipseWriteStep :
(
	Check,
	FirstPotisionMove,
	Write,
	ZAxisUpPotision
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>